--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -574,6 +574,10 @@ video {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
 }
+.mx-2{
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
 .mx-10{
 	margin-left: 2.5rem;
 	margin-right: 2.5rem;
@@ -585,10 +589,6 @@ video {
 .mx-6{
 	margin-left: 1.5rem;
 	margin-right: 1.5rem;
-}
-.mx-2{
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
 }
 .my-3{
 	margin-top: 0.75rem;
@@ -667,6 +667,15 @@ video {
 .mt-4{
 	margin-top: 1rem;
 }
+.mt-7{
+	margin-top: 1.75rem;
+}
+.mr-14{
+	margin-right: 3.5rem;
+}
+.ml-5{
+	margin-left: 1.25rem;
+}
 .mb-11{
 	margin-bottom: 2.75rem;
 }
@@ -678,9 +687,6 @@ video {
 }
 .mr-16{
 	margin-right: 4rem;
-}
-.mr-14{
-	margin-right: 3.5rem;
 }
 .mr-3{
 	margin-right: 0.75rem;
@@ -694,14 +700,11 @@ video {
 .mr-5{
 	margin-right: 1.25rem;
 }
-.mt-7{
-	margin-top: 1.75rem;
-}
-.ml-5{
-	margin-left: 1.25rem;
-}
 .mb-10{
 	margin-bottom: 2.5rem;
+}
+.ml-12{
+	margin-left: 3rem;
 }
 .block{
 	display: block;
@@ -797,17 +800,17 @@ video {
 .gap-4{
 	gap: 1rem;
 }
+.gap-2{
+	gap: 0.5rem;
+}
+.gap-0{
+	gap: 0px;
+}
 .gap-7{
 	gap: 1.75rem;
 }
 .gap-1{
 	gap: 0.25rem;
-}
-.gap-0{
-	gap: 0px;
-}
-.gap-2{
-	gap: 0.5rem;
 }
 .gap-x-2{
 	column-gap: 0.5rem;
@@ -820,6 +823,9 @@ video {
 }
 .rounded{
 	border-radius: 0.25rem;
+}
+.rounded-md{
+	border-radius: 0.375rem;
 }
 .border{
 	border-width: 1px;
@@ -836,6 +842,10 @@ video {
 }
 .border-current{
 	border-color: currentColor;
+}
+.border-gray-500{
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .bg-white{
 	--tw-bg-opacity: 1;
@@ -878,6 +888,12 @@ video {
 }
 .p-6{
 	padding: 1.5rem;
+}
+.p-0\.5{
+	padding: 0.125rem;
+}
+.p-0{
+	padding: 0px;
 }
 .px-3{
 	padding-left: 0.75rem;
@@ -927,6 +943,10 @@ video {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
+.px-16{
+	padding-left: 4rem;
+	padding-right: 4rem;
+}
 .py-1{
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
@@ -958,6 +978,9 @@ video {
 .pr-12{
 	padding-right: 3rem;
 }
+.pr-3{
+	padding-right: 0.75rem;
+}
 .pb-8{
 	padding-bottom: 2rem;
 }
@@ -979,26 +1002,35 @@ video {
 .pb-7{
 	padding-bottom: 1.75rem;
 }
+.pl-2{
+	padding-left: 0.5rem;
+}
 .pb-0\.5{
 	padding-bottom: 0.125rem;
 }
 .pb-0{
 	padding-bottom: 0px;
 }
-.pl-2{
-	padding-left: 0.5rem;
+.pr-16{
+	padding-right: 4rem;
 }
-.pl-8{
-	padding-left: 2rem;
+.pb-5{
+	padding-bottom: 1.25rem;
 }
-.pb-11{
-	padding-bottom: 2.75rem;
+.pl-0\.5{
+	padding-left: 0.125rem;
 }
 .pl-3{
 	padding-left: 0.75rem;
 }
 .pt-7{
 	padding-top: 1.75rem;
+}
+.pl-8{
+	padding-left: 2rem;
+}
+.pb-11{
+	padding-bottom: 2.75rem;
 }
 .pl-11{
 	padding-left: 2.75rem;
@@ -1008,9 +1040,6 @@ video {
 }
 .pr-2{
 	padding-right: 0.5rem;
-}
-.pr-16{
-	padding-right: 4rem;
 }
 .pl-4{
 	padding-left: 1rem;
@@ -1027,11 +1056,11 @@ video {
 .pt-0{
 	padding-top: 0px;
 }
-.pl-9{
-	padding-left: 2.25rem;
-}
 .pl-14{
 	padding-left: 3.5rem;
+}
+.pl-9{
+	padding-left: 2.25rem;
 }
 .pl-7{
 	padding-left: 1.75rem;
@@ -1039,20 +1068,17 @@ video {
 .pr-5{
 	padding-right: 1.25rem;
 }
-.pr-3{
-	padding-right: 0.75rem;
-}
 .pl-6{
 	padding-left: 1.5rem;
 }
 .pt-0\.5{
 	padding-top: 0.125rem;
 }
-.text-left{
-	text-align: left;
-}
 .text-center{
 	text-align: center;
+}
+.text-left{
+	text-align: left;
 }
 .align-baseline{
 	vertical-align: baseline;
@@ -1139,6 +1165,10 @@ video {
 .text-gray-600{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.text-black{
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .underline{
 	text-decoration: underline;
@@ -2784,6 +2814,15 @@ video {
 	.md\:mr-0{
 		margin-right: 0px;
 	}
+	.md\:ml-7{
+		margin-left: 1.75rem;
+	}
+	.md\:mt-0{
+		margin-top: 0px;
+	}
+	.md\:ml-0{
+		margin-left: 0px;
+	}
 	.md\:flex{
 		display: flex;
 	}
@@ -2804,6 +2843,9 @@ video {
 	}
 	.md\:flex-row{
 		flex-direction: row;
+	}
+	.md\:gap-4{
+		gap: 1rem;
 	}
 	.md\:px-3{
 		padding-left: 0.75rem;
@@ -2847,6 +2889,12 @@ video {
 	.lg\:col-span-6{
 		grid-column: span 6 / span 6;
 	}
+	.lg\:col-span-5{
+		grid-column: span 5 / span 5;
+	}
+	.lg\:col-span-7{
+		grid-column: span 7 / span 7;
+	}
 	.lg\:mx-14{
 		margin-left: 3.5rem;
 		margin-right: 3.5rem;
@@ -2855,13 +2903,13 @@ video {
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.lg\:mx-16{
-		margin-left: 4rem;
-		margin-right: 4rem;
-	}
 	.lg\:mx-1{
 		margin-left: 0.25rem;
 		margin-right: 0.25rem;
+	}
+	.lg\:mx-16{
+		margin-left: 4rem;
+		margin-right: 4rem;
 	}
 	.lg\:mx-11{
 		margin-left: 2.75rem;
@@ -2870,11 +2918,14 @@ video {
 	.lg\:mb-5{
 		margin-bottom: 1.25rem;
 	}
-	.lg\:mr-11{
-		margin-right: 2.75rem;
-	}
 	.lg\:mr-0{
 		margin-right: 0px;
+	}
+	.lg\:mr-96{
+		margin-right: 24rem;
+	}
+	.lg\:mr-11{
+		margin-right: 2.75rem;
 	}
 	.lg\:w-1\/4{
 		width: 25%;
@@ -2907,11 +2958,14 @@ video {
 	.lg\:pr-0{
 		padding-right: 0px;
 	}
-	.lg\:pl-6{
-		padding-left: 1.5rem;
-	}
 	.lg\:pl-1{
 		padding-left: 0.25rem;
+	}
+	.lg\:pl-16{
+		padding-left: 4rem;
+	}
+	.lg\:pl-6{
+		padding-left: 1.5rem;
 	}
 	.lg\:pl-9{
 		padding-left: 2.25rem;
